miniav_ffi/miniav_c/include/miniav_capture.h


// --- Buffer Callback ---
typedef void (*MiniAVBufferCallback)(const MiniAVBuffer *buffer,
                                     void *user_data);


// --- Device Change Notification API ---
//
// All MiniAV_*_SetDeviceChangeCallback / SetDisplayChangeCallback /
// SetWindowChangeCallback / SetGamepadChangeCallback functions follow the
// same contract:
//   - Pass a non-NULL callback to subscribe.
//   - Pass NULL to unsubscribe (and tear down any background watcher).
//   - Calling subscribe again replaces the previous callback.
//   - Implementation may be polling-based; events typically arrive within
//     1-2 seconds of the underlying OS change.
//   - The callback runs on a background thread; do not call back into MiniAV
//     APIs that may block waiting for the same thread.
typedef enum {
  MINIAV_DEVICE_CHANGE_ADDED = 0,
  MINIAV_DEVICE_CHANGE_REMOVED = 1,
  MINIAV_DEVICE_CHANGE_DEFAULT_CHANGED = 2,
} MiniAVDeviceChangeEvent;


typedef void (*MiniAVDeviceChangeCallback)(MiniAVDeviceChangeEvent event,
                                           const MiniAVDeviceInfo *device,
                                           void *user_data);


// --- Per-Context Device-Lost Callback ---
//
// Fires when the device a capture context is currently using becomes
// unavailable mid-stream (unplugged, disabled, format renegotiation failed,
// GPU reset, etc.). Capture is automatically stopped and the context becomes
// unusable; the application should call MiniAV_*_DestroyContext and
// reconfigure if needed.
//
// The callback runs on an internal capture/notification/loop thread; treat it
// like any other capture-thread callback. IMPORTANT: do NOT synchronously
// call MiniAV_*_StopCapture / MiniAV_*_DestroyContext from inside the
// callback — several backends join or drain the very thread/queue delivering
// it, which would self-deadlock. Post the teardown to your own executor
// instead. (The Dart FFI shim satisfies this automatically: its
// NativeCallable.listener delivery is asynchronous.)
typedef void (*MiniAVContextLostCallback)(int /*MiniAVResultCode*/ reason,
                                          void *user_data);