miniav_ffi/lib/miniav_ffi_bindings.dart


typedef MiniAVKeyboardCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<MiniAVKeyboardEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVKeyboardCallbackFunction =
    void Function(
      ffi.Pointer<MiniAVKeyboardEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVKeyboardCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVKeyboardCallbackFunction>>;
typedef MiniAVMouseCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<MiniAVMouseEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVMouseCallbackFunction =
    void Function(
      ffi.Pointer<MiniAVMouseEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVMouseCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVMouseCallbackFunction>>;
typedef MiniAVGamepadCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<MiniAVGamepadEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVGamepadCallbackFunction =
    void Function(
      ffi.Pointer<MiniAVGamepadEvent> event,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVGamepadCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVGamepadCallbackFunction>>;

final class MiniAVInputConfig extends ffi.Struct {
  @ffi.Uint32()
  external int input_types;

  @ffi.Uint32()
  external int mouse_throttle_hz;

  @ffi.Uint32()
  external int gamepad_poll_hz;

  external MiniAVKeyboardCallback keyboard_callback;

  external MiniAVMouseCallback mouse_callback;

  external MiniAVGamepadCallback gamepad_callback;

  external ffi.Pointer<ffi.Void> user_data;
}

enum MiniAVLogLevel {
  MINIAV_LOG_LEVEL_TRACE(0),
  MINIAV_LOG_LEVEL_DEBUG(1),
  MINIAV_LOG_LEVEL_INFO(2),
  MINIAV_LOG_LEVEL_WARN(3),
  MINIAV_LOG_LEVEL_ERROR(4),
  MINIAV_LOG_LEVEL_NONE(5);

  final int value;
  const MiniAVLogLevel(this.value);

  static MiniAVLogLevel fromValue(int value) => switch (value) {
    0 => MINIAV_LOG_LEVEL_TRACE,
    1 => MINIAV_LOG_LEVEL_DEBUG,
    2 => MINIAV_LOG_LEVEL_INFO,
    3 => MINIAV_LOG_LEVEL_WARN,
    4 => MINIAV_LOG_LEVEL_ERROR,
    5 => MINIAV_LOG_LEVEL_NONE,
    _ => throw ArgumentError('Unknown value for MiniAVLogLevel: $value'),
  };
}

typedef MiniAVLogCallbackFunction =
    ffi.Void Function(
      ffi.UnsignedInt level,
      ffi.Pointer<ffi.Char> message,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVLogCallbackFunction =
    void Function(
      MiniAVLogLevel level,
      ffi.Pointer<ffi.Char> message,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVLogCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVLogCallbackFunction>>;

enum MiniAVBufferType {
  MINIAV_BUFFER_TYPE_UNKNOWN(0),
  MINIAV_BUFFER_TYPE_VIDEO(1),
  MINIAV_BUFFER_TYPE_AUDIO(2);

  final int value;
  const MiniAVBufferType(this.value);

  static MiniAVBufferType fromValue(int value) => switch (value) {
    0 => MINIAV_BUFFER_TYPE_UNKNOWN,
    1 => MINIAV_BUFFER_TYPE_VIDEO,
    2 => MINIAV_BUFFER_TYPE_AUDIO,
    _ => throw ArgumentError('Unknown value for MiniAVBufferType: $value'),
  };
}

enum MiniAVNativeHandleType {
  MINIAV_NATIVE_HANDLE_TYPE_UNKNOWN(0),
  MINIAV_NATIVE_HANDLE_TYPE_VIDEO_CAMERA(1),
  MINIAV_NATIVE_HANDLE_TYPE_VIDEO_SCREEN(2),
  MINIAV_NATIVE_HANDLE_TYPE_AUDIO(3);

  final int value;
  const MiniAVNativeHandleType(this.value);

  static MiniAVNativeHandleType fromValue(int value) => switch (value) {
    0 => MINIAV_NATIVE_HANDLE_TYPE_UNKNOWN,
    1 => MINIAV_NATIVE_HANDLE_TYPE_VIDEO_CAMERA,
    2 => MINIAV_NATIVE_HANDLE_TYPE_VIDEO_SCREEN,
    3 => MINIAV_NATIVE_HANDLE_TYPE_AUDIO,
    _ => throw ArgumentError(
      'Unknown value for MiniAVNativeHandleType: $value',
    ),
  };
}

enum MiniAVBufferContentType {
  MINIAV_BUFFER_CONTENT_TYPE_CPU(0),
  MINIAV_BUFFER_CONTENT_TYPE_GPU_D3D11_HANDLE(1),
  MINIAV_BUFFER_CONTENT_TYPE_GPU_METAL_TEXTURE(2),
  MINIAV_BUFFER_CONTENT_TYPE_GPU_DMABUF_FD(3),
  MINIAV_BUFFER_CONTENT_TYPE_GPU_AHARDWAREBUFFER(4);

  final int value;
  const MiniAVBufferContentType(this.value);

  static MiniAVBufferContentType fromValue(int value) => switch (value) {
    0 => MINIAV_BUFFER_CONTENT_TYPE_CPU,
    1 => MINIAV_BUFFER_CONTENT_TYPE_GPU_D3D11_HANDLE,
    2 => MINIAV_BUFFER_CONTENT_TYPE_GPU_METAL_TEXTURE,
    3 => MINIAV_BUFFER_CONTENT_TYPE_GPU_DMABUF_FD,
    4 => MINIAV_BUFFER_CONTENT_TYPE_GPU_AHARDWAREBUFFER,
    _ => throw ArgumentError(
      'Unknown value for MiniAVBufferContentType: $value',
    ),
  };
}

final class MiniAVVideoPlane extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data_ptr;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint32()
  external int stride_bytes;

  @ffi.Uint32()
  external int offset_bytes;

  @ffi.Uint32()
  external int subresource_index;

  @ffi.Int32()
  external int dmabuf_fd;

  @ffi.Uint64()
  external int drm_format_modifier;
}

final class UnnamedStruct1 extends ffi.Struct {
  external MiniAVVideoInfo info;

  @ffi.Uint32()
  external int num_planes;

  @ffi.Array.multi([4])
  external ffi.Array<MiniAVVideoPlane> planes;
}

final class UnnamedStruct2 extends ffi.Struct {
  @ffi.Uint32()
  external int frame_count;

  external MiniAVAudioInfo info;

  external ffi.Pointer<ffi.Void> data;
}

final class UnnamedUnion2 extends ffi.Union {
  external UnnamedStruct1 video;

  external UnnamedStruct2 audio;
}

final class MiniAVBuffer extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  MiniAVBufferType get type => MiniAVBufferType.fromValue(typeAsInt);

  @ffi.UnsignedInt()
  external int content_typeAsInt;

  MiniAVBufferContentType get content_type =>
      MiniAVBufferContentType.fromValue(content_typeAsInt);

  @ffi.Int64()
  external int timestamp_us;

  external UnnamedUnion2 data;

  @ffi.Size()
  external int data_size_bytes;

  external ffi.Pointer<ffi.Void> user_data;

  external ffi.Pointer<ffi.Void> internal_handle;

  external _MiniAVNativeFence native_fence;
}

final class _MiniAVNativeFence extends ffi.Struct {
  @ffi.Int32()
  external int sync_fd;

  @ffi.Uint32()
  // ignore: unused_field
  external int pad0;

  external ffi.Pointer<ffi.Void> d3d11_fence;

  external ffi.Pointer<ffi.Void> metal_shared_event;

  @ffi.Uint64()
  external int metal_fence_value;
}

final class MiniAVNativeBufferInternalPayload extends ffi.Struct {
  @ffi.UnsignedInt()
  external int handle_typeAsInt;

  MiniAVNativeHandleType get handle_type =>
      MiniAVNativeHandleType.fromValue(handle_typeAsInt);

  external ffi.Pointer<ffi.Void> context_owner;

  external ffi.Pointer<ffi.Void> native_singular_resource_ptr;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Pointer<ffi.Void>> native_planar_resource_ptrs;

  @ffi.Uint32()
  external int num_planar_resources_to_release;

  external ffi.Pointer<MiniAVBuffer> parent_miniav_buffer_ptr;
}

typedef MiniAVBufferCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<MiniAVBuffer> buffer,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVBufferCallbackFunction =
    void Function(
      ffi.Pointer<MiniAVBuffer> buffer,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVBufferCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVBufferCallbackFunction>>;

// --- Device change / context lost callback typedefs ---

/// Mirrors the C `MiniAVDeviceChangeEvent` enum.
enum MiniAVDeviceChangeEvent {
  added(0),
  removed(1),
  defaultChanged(2);

  final int value;
  const MiniAVDeviceChangeEvent(this.value);

  static MiniAVDeviceChangeEvent fromValue(int v) {
    switch (v) {
      case 0:
        return MiniAVDeviceChangeEvent.added;
      case 1:
        return MiniAVDeviceChangeEvent.removed;
      case 2:
        return MiniAVDeviceChangeEvent.defaultChanged;
      default:
        throw ArgumentError('Unknown MiniAVDeviceChangeEvent value: $v');
    }
  }
}

typedef MiniAVDeviceChangeCallbackFunction =
    ffi.Void Function(
      ffi.Int32 event,
      ffi.Pointer<MiniAVDeviceInfo> device,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef DartMiniAVDeviceChangeCallbackFunction =
    void Function(
      int event,
      ffi.Pointer<MiniAVDeviceInfo> device,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef MiniAVDeviceChangeCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVDeviceChangeCallbackFunction>>;

typedef MiniAVContextLostCallbackFunction =
    ffi.Void Function(ffi.Int reason, ffi.Pointer<ffi.Void> user_data);
typedef DartMiniAVContextLostCallbackFunction =
    void Function(int reason, ffi.Pointer<ffi.Void> user_data);
typedef MiniAVContextLostCallback =
    ffi.Pointer<ffi.NativeFunction<MiniAVContextLostCallbackFunction>>;

const int MINIAV_DEVICE_ID_MAX_LEN = 256;

const int MINIAV_DEVICE_NAME_MAX_LEN = 256;

const int MINIAV_VIDEO_FORMAT_MAX_PLANES = 4;
